--- a/ChinookWebAPIOData/ChinookWebAPIOData.csproj
+++ b/ChinookWebAPIOData/ChinookWebAPIOData.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Helpers.cs" />
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\Artist.cs" />
     <Compile Include="Models\ChinookModel.cs" />
