--- a/ChinookWebAPIOData/Web.config
+++ b/ChinookWebAPIOData/Web.config
@@ -15,8 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.1" />
-    <httpRuntime targetFramework="4.5.1" />
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
   </system.web>
   
   <runtime>
@@ -81,10 +81,6 @@
     <add name="ChinookDbModel" connectionString="data source=devlaptop;initial catalog=Chinook;integrated security=True;multipleactiveresultsets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer></configuration>
+  <modules runAllManagedModulesForAllRequests="true" />
+  </system.webServer>
+</configuration>
