added and fixed bugs with the sample Actions and Functions

--- a/ChinookWebAPIOData/Web.config
+++ b/ChinookWebAPIOData/Web.config
@@ -80,7 +80,13 @@
   <connectionStrings>
     <add name="ChinookDbModel" connectionString="data source=devlaptop;initial catalog=Chinook;integrated security=True;multipleactiveresultsets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
-<system.webServer>
-  <modules runAllManagedModulesForAllRequests="true" />
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+    <handlers>
+      <clear/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="/*"
+          verb="*" type="System.Web.Handlers.TransferRequestHandler"
+          preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
   </system.webServer>
 </configuration>
