--- a/ChinookWebAPIOData/Web.config
+++ b/ChinookWebAPIOData/Web.config
@@ -59,15 +59,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.OData.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.8.1.0" newVersion="6.8.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.9.0.0" newVersion="6.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.OData.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.8.1.0" newVersion="6.8.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.9.0.0" newVersion="6.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Spatial" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.8.1.0" newVersion="6.8.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.9.0.0" newVersion="6.9.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -83,10 +83,8 @@
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
-      <clear/>
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="/*"
-          verb="*" type="System.Web.Handlers.TransferRequestHandler"
-          preCondition="integratedMode,runtimeVersionv4.0" />
+      <clear />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="/*" verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
 </configuration>
