--- a/ChinookWebAPIOData/Web.config
+++ b/ChinookWebAPIOData/Web.config
@@ -78,7 +78,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ChinookDbModel" connectionString="data source=devlaptop;initial catalog=Chinook;integrated security=True;multipleactiveresultsets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ChinookDbModel" connectionString="data source=.\SQL2014;initial catalog=Chinook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SchoolContext" connectionString="data source=.\SQL2014;initial catalog=EF6Test.SchoolModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
